--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --open",
     "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint",
-    "new:comp": "node ./scripts/generateComponent"
+    "dev": "vue-cli-service serve --open",
+    "new:comp": "node ./scripts/generateComponent",
+    "new:page": "node ./scripts/generateView"
   },
   "dependencies": {
     "core-js": "^2.6.5",
