--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "new:page": "node ./scripts/generateView"
   },
   "dependencies": {
+    "async-validator": "^1.11.3",
     "core-js": "^2.6.5",
     "element-ui": "^2.8.2",
     "vue": "^2.6.10",
